@@ -1,1 +1,1 @@
-{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202304101333","configPath":"/storage/emulated/0/Process/automate/1 Context/","backupPath":"/storage/emulated/0/Process/automate/backup.bak","bodTime":32400,"eodTime":600,"eodJobs":[{"dataSubFolder":"health/exercise/","maxKey":"hr","workKey":"work"},{"dataSubFolder":"health/metrics/","maxKey":"restingHeartRate","workKey":"restingHeartRate"},{"dataSubFolder":"health/sleep/","maxKey":"duration","workKey":"work"},{"dataSubFolder":"finances/transactions/","maxKey":"baseAmount","workKey":"baseAmount"}],"heartrateDelay":300,"walkingDelay":1800,"comment":"Add delay to sleep check","uri":"content://com.llamalab.automate.provider/flows/8//data"}
+{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202304192125","configPath":"/storage/emulated/0/Process/automate/1 Context/","backupPath":"/storage/emulated/0/Process/automate/backup.bak","bodTime":32400,"eodTime":600,"eodJobs":[{"dataSubFolder":"health/exercise/","maxKey":"hr","workKey":"work"},{"dataSubFolder":"health/metrics/","maxKey":"restingHeartRate","workKey":"restingHeartRate"},{"dataSubFolder":"health/sleep/","maxKey":"duration","workKey":"work"},{"dataSubFolder":"finances/transactions/","maxKey":"baseAmount","workKey":"baseAmount"}],"heartrateDelay":300,"walkingDelay":1800,"comment":"Renamed jobs task and hopefully fixed it now","uri":"content://com.llamalab.automate.provider/flows/8//data"}
